# nvrc

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: ci.yaml  release.yaml  verify.yaml
hardened_std/: Cargo.toml
hardened_std/src/: fs.rs  kernlog.rs  lib.rs  panic.rs  process.rs
hardened_std/src/os/unix/: net.rs
src/: daemon.rs  error.rs  execute.rs  hash.rs  init.rs  kata_agent.rs  kernel_params.rs  kmsg.rs  lib.rs  lockdown.rs  main.rs  mode.rs  modprobe.rs  mount.rs  net.rs  nvrc.rs  smi.rs  syslog.rs  test_utils.rs  toolkit.rs
