[workspace]
members = [".", "hardened_std"]

[package]
name = "NVRC"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "NVRC"
path = "src/main.rs"
test = false

[lib]
name = "NVRC"
path = "src/lib.rs"

[dependencies]
cfg-if = "1.0.4"
log = { version = "0.4.29", default-features = false }
libc = "0.2.178"
once_cell = { version = "1.21.3", default-features = false, features = ["alloc"] }
hardened_std = { path = "./hardened_std" }

[profile.dev]
panic = 'abort'

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = 'abort'

[dev-dependencies]
mktemp = "0.5.1"
tempfile = "3.23.0"
serial_test = "3.2.0"

[features]
confidential = []

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage)'] }
